[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schwab"
dynamic = ["version"]
dependencies = [
  "python-dotenv",
  "click",
]
requires-python = ">=3"
authors = [
  {name = "Isaac Lauer", email = "github@ilauer.org"},
]
maintainers = [
  {name = "Isaac Lauer", email = "github@ilauer.org"}
]
description = "Wrapper for Schwab REST API"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["stocks", "options", "Schwab"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
schwab-demo = "schwab:demo"

[tool.hatch.version]
path = "src/schwab/__init__.py"
